# meta-RL-Hackathon

./: .dockerignore  .gitignore  Dockerfile  Gidelines.txt  Guidelines.txt  Problem_statement.txt  README.md  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_local.py  test_output.txt  test_stderr.txt  test_validation.txt
data_clean_env/: README.md  __init__.py  client.py  models.py  openenv.yaml  pyproject.toml
data_clean_env/server/: Dockerfile  __init__.py  app.py  environment.py
server/: app.py
tests/: baseline_scores.txt  test_inference_output.txt  test_validation_output.txt
